GameAction: always trigger should not run if used preList